# objstr-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml  pull_request.yml  release.yml  testing.yml
src/: lib.rs
src/api/: mod.rs  objstr.rs
src/file/: file_obj_str.rs  helpers.rs  mod.rs
tests/: example.rs  mod.rs
tests/file/: file_obj_str_test.rs  mod.rs
