[package]
edition = "2021"

name = "objstr"
version = "0.1.1"

description = "File stream abstraction for Rust"
repository = "https://github.com/maxmielchen/objstr-rs"
readme = "README.md"
authors = ["Max Mielchen <max@mielchen.email>"]
license = "Apache-2.0"
license_file = "LICENSE"
keywords = ["file", "stream", "abstraction", "rust"]
categories = ["io", "no-std", "std"]

[dependencies]
